ca-certificates (20080319) UNRELEASED; urgency=low

  * Added the current SPI CA certificate, used by Debian's infrastructure.

 -- Philipp Kern <pkern@debian.org>  Wed, 19 Mar 2008 14:25:26 +0100

ca-certificates (20070303-0.1) unstable; urgency=low

  * Non-maintainer upload to fix longstanding pending l10n issues.
  * Debconf templates and debian/control reviewed by the debian-l10n-
    english team as part of the Smith review project.
    Closes: #432249, #434789
  * Debconf translation updates:
    - Japanese. Closes:#433067
    - Basque. Closes: #433074
    - Spanish. Closes: #433078
    - Czech. Closes: #433100
    - Galician. Closes: #433215
    - Russian. Closes: #433224
    - Swedish. Closes: #433432
    - Vietnamese. Closes: #433792, #427000, #434992
    - Dutch. Closes: #434670
    - German. Closes: #434788
    - Italian. Closes: #435029
  * Portuguese. Closes: #435471
  * Finnish. Closes: #448826
  * Remove /etc/ssl when purging the package (only if that
    directory is empty). Closes: #454334
  * [Lintian] Give a reference to the GPL text in debian/copyright
  * [Lintian] No longer ignore errors from "make clean"
  * [Lintian] Upgrade debhelper compatibility to 4 (with debian/compat).

 -- Christian Perrier <bubulle@debian.org>  Thu, 14 Feb 2008 19:52:37 +0100

ca-certificates (20070303) unstable; urgency=low

  * Add debconf.org crt. closes: Bug#342088
  * Add cacert class3 crt. closes: Bug#350282
  * Add debian/po/pt.po. closes: Bug#408183
  * Update debian/po/ru.po. closes: Bug#410770
  * Update debian/po/pt_BR.po. closes: Bug#403824
  * Add debian/po/gl.po. closes: Bug#407951

 -- Fumitoshi UKAI <ukai@debian.or.jp>  Sun,  4 Mar 2007 14:12:23 +0900

ca-certificates (20061027.2) unstable; urgency=low

  * Non-maintainer upload to fix an RC issue revealed by the last NMU.
  * Avoid cd to /etc/ssl/certs to removing hash symlinks
    Closes: #408469

 -- Christian Perrier <bubulle@debian.org>  Fri,  2 Feb 2007 07:23:27 +0100
